--- a/style.css
+++ b/style.css
@@ -13,12 +13,14 @@
     --x:0;
     --y:0;
 }
+
 html{
     font-size: 100%;
 }
 body{
     background-color: #0c0c0c;
     font-family: var(--font-popins);
+    user-select: none;
 }
 /* header */
 .header{
@@ -119,7 +121,6 @@ body{
     
     }
 }
-
 .mb-links{
     color: white;
     text-decoration: none;
@@ -140,9 +141,11 @@ body{
 /* hero section */
 .hero{
     padding-top: 105px;
-    overflow: hidden;
+    display: grid;
+    grid-template-rows: 1fr;
+    /* overflow: hidden; */
     animation:  2s cubic-bezier(0.4, 0, 0.2, 1) drop;
-    /* transition: all 0.3s ease-in    ; */
+    transition: grid-template-rows 500ms;
 }
 .hero-work{
     padding-top: 105px;
@@ -150,25 +153,27 @@ body{
 }
 @keyframes drop{
     0%{
-        height: 100px;
+        grid-template-rows: 0fr;
     }
-    /* 25%{
-        height: 185px;
-    } */
     100%{
-        height: 488px;
+        grid-template-rows: 1fr;
     }
 }
+
+
 @media(max-width:768px){
     .hero{
         padding-top: 85px;
     }
 }
+
 .content-wrapper{
    padding: 20px 20px 0;
+   overflow: hidden;
 }
+
 .content{
-    padding:20px 20px 250px 20px;
+    padding:20px 20px 108px 20px;
     overflow: hidden;
     background-color: #191a20cc;
     background-image: url(./assets/bg-1.png), url(./assets/bg-2.png);
@@ -228,22 +233,88 @@ body{
     background-image: url(./assets/bg-2.png);
 } */
 .hero-intro{
-color: white;
-font-size: 4.0625em;
-animation: 2s cubic-bezier(0.4, 0, 0.2, 1) .1s pop;
+    color: white;
+    font-size: 4.0625em;
+    animation: 2s cubic-bezier(0.4, 0, 0.2, 1) .1s pop;
+    margin-bottom: 2rem;
 }
 /* work other page  */
 .hero-intro-work{
 color: white;
 font-size: 4.0625em;
+}
+.hero-name{
+    animation: 2s cubic-bezier(0.4, 0, 0.2, 1) .1s pop;
 
 }
-@media screen and (max-width:500px) {
+.hero-name,.specialized{
+    color: white;
+    margin-bottom: 2rem;
+}
+.hero-name span{
+    background-color: #9880ff;
+    background-size: 100%;
+    background-position: 1255px 183px;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+.specialized {
+    display: flex;
+    align-items: center;
+}
+.specialized h3{
+    margin: 0;
+    font-size: 1.3em;
+}
+.specialized span{
+    width: 244px;
+    height: 2px;
+    border-radius: 10px;
+    background-color: #FFE082;
+    margin-right: 1rem;
+    animation: 2s cubic-bezier(0.4, 0, 0.2, 1) .1s slidein;
+}
+
+.small-desc{
+    font-size: .8em;
+    width: 35%;
+    text-align: left;
+    color: #b9b9b9;
+}
+@keyframes slidein{
+    0%{
+        width: 0;
+    }
+    100%{
+        width: 244px;
+    }
+}
+@media screen and (max-width:520px) {
     .hero-intro-work{
         font-size: 3.0625em;
     }
+    .specialized span{
+        width: 164px;
+    }
+    .small-desc{
+        width: 100%;
+        text-align: justify;
+        font-size: 1em;
+        color: #ebebeb;
+    }
+    @keyframes slidein{
+        0%{
+            width: 0;
+        }
+        100%{
+            width: 164px;
+        }
+    }
 }
 /* ends */
+
 @keyframes pop{
     0%{
         transform: translate3d(0px, 100%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
@@ -368,6 +439,9 @@ font-size: 4.0625em;
 }
 .part-I{
     animation: 2s cubic-bezier(0.4, 0, 0.2, 1) .1s fade;
+}
+.delay{
+    animation-delay: .1s;
 }
 @keyframes fade{
     0%{
@@ -655,3 +729,5 @@ font-size: 4.0625em;
     backdrop-filter: blur(20px);
 }
 /* ends */
+
+
